# bebop_ws

Backups/: DirectionController.cpp  SpeedController_follower.cpp  SpeedController_follower1.cpp
Backups/Backup_20161114/bebop_ws/devel/: setup.sh
Backups/Backup_20161114/catkin_ws/src/bebop_controller/: CMakeLists.txt~
Backups/Backup_20161121/catkin_ws/devel/: setup.sh
Backups/Backup_20161125/bebop_ws/devel/: .rosinstall
Backups/Backup_20161125/catkin_ws/devel/: .catkin  .rosinstall
Backups/Backup_20161125/catkin_ws/src/bebop_controller/: CMakeLists.txt  CMakeLists.txt~
Backups/Backup_20161201/bebop_ws/src/bebop_autopilot/: CMakeLists.txt  CMakeLists.txt~  package.xml
Backups/Backup_20161208/bebop_ws/devel/: .catkin
Backups/Backup_20161208/bebop_ws/src/bebop_autopilot/: CMakeLists.txt  CMakeLists.txt~
Backups/Backup_20161208/bebop_ws/src/bebop_autopilot/launch/: agent_test.launch  bebop_auto.launch  bebop_auto_following.launch  bebop_autotest.launch
Backups/Backup_20161208/bebop_ws/src/bebop_autopilot/src/: Agent.cpp  BebopController.cpp  BebopController_follower.cpp  BebopController_follower1.cpp  DirectionController.cpp  DirectionController_follower.cpp  DirectionController_follower1.cpp  SpeedController.cpp  SpeedController_follower.cpp  SpeedController_follower1.cpp  keyboard_controller.cpp  keyboard_controller1.cpp  test.cpp
devel/include/bebop_driver/: BebopArdrone3Config.h
devel/include/bebop_msgs/: Ardrone3MediaRecordStateVideoResolutionState.h  CommonCalibrationStateMagnetoCalibrationAxisToCalibrateChanged.h  CommonCalibrationStateMagnetoCalibrationStartedChanged.h  CommonCommonStateCurrentDateChanged.h  CommonCommonStateDeprecatedMassStorageContentChanged.h  CommonFlightPlanStateAvailabilityStateChanged.h  CommonOverHeatStateOverHeatRegulationChanged.h
devel/include/obstacle_recognizer/: Information.h
devel/lib/bebop_autopilot/: Agent  BebopController  BebopController_avoid  BebopController_follower  BebopController_follower1  BebopController_follower_test  BebopController_follower_test1  BebopController_test  DirectionController_follower  SpeedController  SpeedController_follower  SpeedController_follower1  keyboard_controller
devel/lib/bebop_driver/: bebop_driver_node
devel/lib/obstacle_recognizer/: obstacle_recognizer_node
devel/lib/pkgconfig/: obstacle_recognizer.pc
devel/share/bebop_tools/cmake/: bebop_toolsConfig.cmake
devel/share/obstacle_recognizer/cmake/: obstacle_recognizer-msg-paths.cmake  obstacle_recognizerConfig.cmake
src/bebop_autopilot/: CMakeLists.txt  CMakeLists.txt~
src/bebop_autopilot/launch/: agent_test.launch  avoid_test.launch  avoid_test.launch~  bebop_auto_follower1.launch  bebop_auto_follower1.launch~  bebop_auto_follower2.launch  bebop_auto_follower2.launch~  bebop_auto_following.launch~  bebop_auto_leader.launch  bebop_auto_test.launch  bebop_auto_test.launch~  bebop_direction.launch  bebop_direction.launch~  bebop_direction1.launch  bebop_direction2.launch  bebop_direction2.launch~
src/bebop_autopilot/src/: Agent.cpp  BebopController.cpp  BebopController_follower.cpp  BebopController_follower1.cpp  DirectionController.cpp  DirectionController_follower.cpp  DirectionController_follower1.cpp  SpeedController.cpp  SpeedController_follower.cpp  SpeedController_follower1.cpp  keyboard_controller1.cpp~  keyboard_controller2.cpp
src/bebop_autopilot/src/test/: BebopController_avoid.cpp  BebopController_follower.cpp  BebopController_follower1.cpp  BebopController_test.cpp
(+410 files in other folders)
